crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_trace_matrix__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "rel_kind": "Satisfy",
    "source_kind": "PartUsage",
    "target_kind": "RequirementUsage",
    "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
  },
  "response": {
    "error": "invalid input: unknown variant `Satisfy`, expected one of `owning`, `typeOf`, `satisfy`, `verify`, `derive`, `refine`, `trace`, `reference`, `specialize`, `redefine`, `subsetting`, `flow`, `transition`, `dependency`, `import`, `allocate`, `binding`, `connection`, `perform`, `exhibit`, `include`, `succession`, `composition`, `annotation`, `successionFlow`, `message`, `featureMembership`, `membership`, `flowOnConnection`, `interfaceConnection`, `portion`, `expose`, `frame`, `assert`, `assume`, `require`, `parameterLink`, `eventOccurrence`"
  }
}
